# logic-graph-compiler

./: .gitignore  .proptest.toml  .tarpaulin.toml  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml
.kiro/specs/causal-graph-compiler/: design.md  requirements.md  tasks.md
crates/cgc-cli/: Cargo.toml
crates/cgc-cli/src/: main.rs
crates/cgc-core/: Cargo.toml
crates/cgc-core/src/: consistency.rs  embedding.rs  error.rs  graph.rs  lib.rs  refinement.rs
crates/cgc-parser/: Cargo.toml
crates/cgc-parser/src/: decomposition.rs  extractor.rs  keywords.rs  lib.rs
crates/cgc-reasoning/: Cargo.toml
crates/cgc-reasoning/src/: exploration.rs  inference.rs  lib.rs  query.rs  test_gen.rs
crates/cgc-web/: Cargo.toml
crates/cgc-web/src/: lib.rs  routes.rs  static_files.rs  ws.rs
installer/: README.md
proto/: README.md  embedding_service.proto  nlp_service.proto
services/embedding-service/: README.md
services/nlp-service/: README.md
tests/: README.md
tests/fixtures/: README.md
tests/integration/: mod.rs
tests/property/: mod.rs
