[package]
name = "cgc-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cgc-core = { path = "../cgc-core" }
cgc-parser = { path = "../cgc-parser" }
cgc-reasoning = { path = "../cgc-reasoning" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
